# taka_the_discord_bot_client

./: .env.example  .gitignore  Cargo.toml  Dockerfile  dummy.rs
src/: context.rs  main.rs
src/assets/: prompt  silly_command_prompt
src/events/: application_command.rs  interactions_create.rs  mod.rs  silly_command.rs
src/interactions/commands/: add_preference.rs  add_silly_image.rs  add_silly_text.rs  create_silly_command.rs  eight_ball.rs  export_silly_commands.rs  help.rs  load_silly_command_images.rs  mod.rs  ping_command.rs  reload_commands.rs  rng.rs  silly_command.rs  test_mode.rs
src/interactions/commands/models/: graph_user_model.rs  mod.rs
src/interactions/commands/options/: mod.rs  user_rank_option.rs  user_stat_options.rs
src/interactions/commands/silly_commands_utils/: add_preference.rs  add_silly_image.rs  add_silly_text.rs  create_silly_command.rs  export_silly_commands.rs  load_silly_command_images.rs  mod.rs  silly_command.rs
src/interactions/commands/subcommands/: mod.rs
src/interactions/commands/subcommands/teto/: discord_user_sub_command.rs  tetrio_user_sub_command.rs
src/interactions/commands/subcommands/tetra/: discord_user_sub_command.rs  mod.rs  tetrio_user_sub_command.rs  ttrm_replay_sub_command.rs
src/interactions/commands/subcommands/ts/: average_sub_command.rs  discord_user_sub_command.rs  mod.rs  stats_sub_command.rs  tetrio_user_sub_command.rs  ttrm_replay_sub_command.rs
src/interactions/commands/subcommands/vst/: mod.rs
src/interactions/commands/subcommands/vst/average/: average_sub_command.rs  discord_sub_command.rs  mod.rs  stats_sub_command.rs  tetrio_sub_command.rs
src/interactions/commands/subcommands/vst/discord/: discord_sub_command.rs  mod.rs  stats_sub_command.rs
src/interactions/commands/subcommands/vst/stats/: mod.rs  stats_sub_command.rs
src/interactions/commands/subcommands/vst/tetrio/: discord_sub_command.rs  mod.rs  stats_sub_command.rs  tetrio_sub_command.rs
src/interactions/commands/tetrio_commands/: lb.rs  mod.rs  psq.rs  rlb.rs  sq.rs  teto.rs  tetra_command.rs  ts.rs  vs.rs  vsr.rs  vst.rs
src/models/: silly_command.rs
src/services/: mod.rs  silly_command.rs
src/sql/: create_types.sql  view_code.sql
src/sql/silly_commands/: add_author_text.sql  add_image.sql  add_image_author.sql  add_preference.sql  add_text.sql  create_command.sql  create_command_usage.sql  fetch_command_usage.sql  fetch_random_silly_image_by_name_and_preference.sql  fetch_silly_command_by_name.sql  fetch_silly_commands.sql  increment_command_usage.sql
src/utils/: average_of_rank.rs  box_commands.rs  create_embed.rs  create_error_message.rs  mod.rs  stats.rs  timer.rs
