[package]
name = "taka_the_discord_bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "taka_the_discord_bot"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dotenvy = "0.15.7"
futures = "0.3.28"
headless_chrome = {version="1.0.5", features=["fetch"]}
serde = "1.0.160"
serde_json = "1.0.96"
tetrio-api = { git = "https://github.com/katamithetaka/tetrio-api", rev = "68daa46" }
tokio = {version = "1.28.0", features = ["full"]}
twilight = "0.15.0"
twilight-gateway = "0.15.2"
twilight-http = "0.15.2"
twilight-interactions = "0.15.1"
twilight-model = "0.15.2"
twilight-util = {version = "0.15.2", features = ["builder"] }
common = {git = "https://github.com/katamithetaka/common" }
reqwest = "0.11.18"
itertools = "0.10.5"
async-trait = "0.1.68"
async-object-pool = "0.1.4"
image = "0.24.6"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "postgres" ] }
rand = "0.8.5"
zip = "0.6.6"
log = "0.4.20"
flexi_logger = "0.25.6"

[dependencies.uuid]
version = "1.3.4"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
